upload all image files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 
-<html lang="en" class="h-100">
+<html lang="ko" class="h-100">
 
 <head>
 
@@ -10,8 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Sejeong Park Portfolio">
-  <meta property="og:description" content="Portfolio website">
+  <meta property="og:title" content="Sejeong Park">
+  <meta property="og:description" content="I'm Sejeong :wave:">
   <meta property="og:image" content="assets/selfie.jpg">
 
   <title>Sejeong Park</title>
@@ -71,11 +71,11 @@
     <!-- Fine Circle Responsive Image -->
     <div id="container" class="my-2">
       <div id="element">
-        <img src="assets/selfie.jpg" alt="portfolYOU" class="circle-image wow animated zoomIn" data-wow-delay=".1s">
+        <img src="assets/selfie.jpg" alt="Sejeong Park" class="circle-image wow animated zoomIn" data-wow-delay=".1s">
       </div>
     </div>
 
-    <p class="text-muted wow animated slideInUp" data-wow-delay=".15s">I turn coffee <img class="emoji" title=":coffee:" alt=":coffee:" src="https://github.githubassets.com/images/icons/emoji/unicode/2615.png" height="20" width="20"> into code, use tabs over spaces and never broke production.</p>
+    <p class="text-muted wow animated slideInUp" data-wow-delay=".15s">반갑습니다, 저는 박세정입니다.👋</p>
 
   </div>
 </div>
@@ -92,6 +92,7 @@
       <i class="fab fa-linkedin-in fa-1x"></i>
     </a>
 
+  </div>
 </footer>
 
   
