update resume page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="navbar-nav ml-auto">
 <a class="nav-item nav-link " href="/portfolYOU/projects/">About</a>
 
-      <a class="nav-item nav-link " href="/portfolYOU/blog/">Projects</a>
+      <a class="nav-item nav-link " href="/_site/projtects/index.html">Projects</a>
 
       <a class="nav-item nav-link " href="/portfolYOU/blog/">Resume</a>
 
