--- a/_resume/index.html
+++ b/_resume/index.html
@@ -50,7 +50,8 @@
 
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
-<a class="nav-item nav-link " href="/_about/index.html">About</a>
+
+      <a class="nav-item nav-link " href="/_about/index.html">About</a>
 
       <a class="nav-item nav-link " href="/_projects/index.html">Projects</a>
 
@@ -65,20 +66,10 @@
   </div>
 
 </nav>
-    <div class="row justify-content-center align-items-center p-4">
-  <div class="col-lg-4 col-md-6 text-center mt-4">
 
-    <!-- Fine Circle Responsive Image -->
-    <div id="container" class="my-2">
-      <div id="element">
-        <img src="assets/selfie.jpg" alt="Sejeong Park" class="circle-image wow animated zoomIn" data-wow-delay=".1s">
-      </div>
-    </div>
-
-    <p class="text-muted wow animated slideInUp" data-wow-delay=".15s">반갑습니다, 저는 박세정입니다.👋</p>
-
-  </div>
-</div>
+    <center>
+        <iframe src="/assets/resume/resume.pdf" style="width:100%; height:1200px;" frameborder="0"></iframe>
+    </center>
 
   </main>
   <footer class="mt-auto py-3 text-center">
