final index name changed

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
-<a class="nav-item nav-link " href="/_about/index.html">About</a>
+      <a class="nav-item nav-link " href="/_about/">About</a>
 
-      <a class="nav-item nav-link " href="/_projects/index.html">Projects</a>
+      <a class="nav-item nav-link " href="/_projects/">Projects</a>
 
-      <a class="nav-item nav-link " href="/_resume/index.html">Resume</a>
+      <a class="nav-item nav-link " href="/_resume/">Resume</a>
 
       <a class="nav-item nav-link " href="https://github.com/sj3218"><i class="fab fa-1x fa-github"></i></a>
 
