--- a/_resume/resume.html
+++ b/_resume/resume.html
@@ -50,11 +50,12 @@
 
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link " href="/_about/">About</a>
 
-      <a class="nav-item nav-link " href="/_projects/">Projects</a>
+      <a class="nav-item nav-link " href="/_about/about.html">About</a>
 
-      <a class="nav-item nav-link " href="/_resume/">Resume</a>
+      <a class="nav-item nav-link " href="/_projects/projects.html">Projects</a>
+
+      <a class="nav-item nav-link " href="/_resume/resume.html">Resume</a>
 
       <a class="nav-item nav-link " href="https://github.com/sj3218"><i class="fab fa-1x fa-github"></i></a>
 
