change the picture

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link " href="/_about/about.html">About</a>
+      <a class="nav-item nav-link " href="/_about/">About</a>
 
-      <a class="nav-item nav-link " href="/_projects/projects.html">Projects</a>
+      <a class="nav-item nav-link " href="/_projects/">Projects</a>
 
-      <a class="nav-item nav-link " href="/_resume/resume.html">Resume</a>
+      <a class="nav-item nav-link " href="/_resume/">Resume</a>
 
       <a class="nav-item nav-link " href="https://github.com/sj3218"><i class="fab fa-1x fa-github"></i></a>
 
@@ -72,7 +72,7 @@
     <div id="container" class="my-2">
       <div id="dummy"></div>
       <div id="element">
-        <img src="assets/face.jpg" alt="sejeong " class="circle-image wow animated" data-wow-delay=".1s">
+        <img src="./assets/selfie.jpg" alt="sejeong " class="circle-image wow animated" data-wow-delay=".1s">
       </div>
     </div>
 
