--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div id="container" class="my-2">
       <div id="dummy"></div>
       <div id="element">
-        <img src="./assets/selfie.jpg" alt="sejeong " class="circle-image wow animated" data-wow-delay=".1s">
+        <img src="assets/selfie.jpg" alt="sejeong " class="circle-image wow animated" data-wow-delay=".1s">
       </div>
     </div>
 
