--- a/pages/personal.html
+++ b/pages/personal.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Game Projects
-permalink: /projects/
-weight: 2
+title: Personal Projects
+permalink: /personal/
+weight: 3
 remote_projects: 
   - git-for-wizards
   - arduino-visitor-counter
 ---
 
-{% include projects/index.html %}
+{% include personal/index.html %}
