--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Personal Projects
-permalink: /personal/
-weight: 3
+title: Game Projects
+permalink: /projects/
+weight: 2
 remote_projects: 
   - git-for-wizards
   - arduino-visitor-counter
 ---
 
-{% include personal/index.html %}
+{% include projects/index.html %}
