--- a/pages/personal.html
+++ b/pages/personal.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Personal Projects
-permalink: /projects/
+permalink: /personal/
 weight: 3
 remote_projects: 
   - git-for-wizards
